[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prepaid_sim_py_client_xethhung12"
version = "0.0.1"
authors = [
  { name="Xeth", email="admin@xethh.me" },
]
description = "A small package the used query prepaid sim data amount."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'requests',
    'lxml'
]

[project.urls]
Homepage = "https://github.com/xh-dev/prepaid-sim-py-client-xethhung12"
Issues = "https://github.com/xh-dev/prepaid-sim-py-client-xethhung12/issues"
